docs: Swagger de modificar y borrar planeta
